<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Needle Master</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="select_level">Select Level</string>
    <string name="begin_game">Begin Game</string>
    <string name="background_screen_content_description">Background screen for app</string>
    <string name="about_button">About</string>
    <string name="title_activity_scoring">Final Score Report</string>
    <string name="extra_level_number">EXTRA_LEVEL_NUMBER</string>
    <string name="retry_button_label">Retry Level</string>
    <string name="back_to_main_label">Back to Main</string>
    <string name="next_button_label">Next Level</string>
    <string name="final_report_title">Final Report</string>
    <string name="gates_default_label">\???/???</string>
    <string name="tissue_label">Tissue Damage</string>
    <string name="deep_tissue_label">Deep Tissue</string>
    <string name="length_label">Path Length</string>
    <string name="default_label">\???</string>
    <string name="time_remaining_label">\??? seconds</string>
    <string name="gates_label">Gates Hit</string>
    <string name="final_score_default_label">\???/???</string>
    <string name="title_activity_select_level">Select Level</string>
    <string name="title_activity_about">About</string>
    <string name="about_title_label">About This Game</string>
    <string name="about_text_label">\tThis game was created by Chris Paxton, at The Johns Hopkins University, as part of a research project on robot learning from demonstration. As you complete different levels, think about how you are moving the needle in relation to different parts of the environment. You might find yourself using some of the same patterns over and over again as you try to accomplish different things.\n\n\tInterested in helping out? Leave me a comment!</string>
    <string name="checkbox_label">I understand.</string>
    <string name="title_activity_options">Options</string>
    <string name="options_title_view">Game Options</string>
    <string name="option_collect_data">Should the game save trials to device storage for later analysis? By default they will be stored in the directory "needle_master_trials" alongside files describing the levels themselves.</string>
    <string name="store_data_checkbox_text">Yes, save data files to this directory!</string>
    <string name="options_clear_text">Press the button below to delete the contents of the \"needle_master_trials\" directory.</string>
    <string name="delete_button_text">CLEAR DATA</string>
    <string name="files_button_text">There are currently %d saved data files.</string>
    <string name="options_button_text">Options</string>
    <string name="files_empty_text">The data directory is currently empty!</string>
    <string name="randomStartOption">Slightly randomize starting positions on each level.</string>

</resources>
